# ogjort

./: README.md  main.py  pyproject.toml  requirements.txt
.github/: python-webapp-on-azure.yml
.github/workflows/: python-app.yml  python-webapp-on-azure.yml
tests/: test_ogjort.py
